completed second home page and made sure the third renders without issues, fixed the issue with the hero section being too large

--- a/react-vite/src/components/Home/NotAuthHome/NotAuthHome.css
+++ b/react-vite/src/components/Home/NotAuthHome/NotAuthHome.css
@@ -369,7 +369,7 @@
 
 .hero-section {
 	padding-top: 242px;
-	padding-bottom: 242px;
+	padding-bottom: 207px;
 	width: 100%;
 	display: flex;
 	align-items: center;
@@ -380,7 +380,7 @@
 	flex-flow: column;
 	justify-content: center;
 	align-items: center;
-	height: 100svh;
+	/* height: 100svh; */
 	margin: 0;
 	padding-top: 100px;
 	text-align: center;
